# gif2webp_for_android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/basura/gif2webp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gif2webp/: gif2webp.c
app/src/main/cpp/giflib/: CMakeLists.txt  config.h
app/src/main/cpp/webp/: CMakeLists.txt
app/src/main/cpp/webp/examples/: CMakeLists.txt  example_util.h  unicode_gif.h
app/src/main/cpp/webp/imageio/: CMakeLists.txt
app/src/main/java/com/example/basura/gif2webp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/basura/gif2webp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
